
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/02/15 14:17:00 EST
Tag: blume-20020215-showbindings
Description:

Added EnvRef.listBoundSymbols and CM.State.showBindings.  Especially
the latter can be useful for exploring what bindings are available at
the interactive prompt.  (The first function returns only the list
of symbols that are really bound, the second prints those but also the
ones that CM's autoloading mechanism knows about.)

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/02/15 12:08:00 EST
Tag: blume-20020215-iptrs
Description:

Two improvements to ml-nlffigen:

  1. Write files only if they do not exist or if their current contents
     do not coincide with what's being written.  (That is, avoid messing
     with the time stamps unless absolutely necessary.)

  2. Implement a "repository" mechanism for generated files related
     to "incomplete pointer types".   See the README file for details.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/02/14 11:50:00 EST
Tag: blume-20020214-quote
Description:

Added a type 't t_' to tag.sml (in ml-nlffi-lib.cm).  This is required
because of the new and improved tag generation scheme.  (Thanks to Allen
Leung for pointing it out.)

----------------------------------------------------------------------
Name: Lal George
Date: 2002/02/14 09:55:27 EST 2002
Tag: george-20020214-isabelle-bug
Description: 

Fixed the MLRISC bug sent by Markus Wenzel regarding the compilation
of Isabelle on the x86.

From Allen:
-----------
 I've found the problem:  
