@@ -1,1 +1,1 @@
-ftp://ftp.research.bell-labs.com/dist/smlnj/working/bootfiles/blume-20020208-uniquepid/
+ftp://ftp.research.bell-labs.com/dist/smlnj/working/110.39/
