@@ -14,6 +14,14 @@ Description:
 
 ----------------------------------------------------------------------
 Name: Matthias Blume
+Date: 2002/02/15 16:00:00 EST
+Tag: Release_110_39
+Description:
+
+Working release 110.39.  New bootfiles.
+
+----------------------------------------------------------------------
+Name: Matthias Blume
 Date: 2002/02/15 14:17:00 EST
 Tag: blume-20020215-showbindings
 Description:
